2000-12-14  Braden McDaniel  <braden@endoframe.com>

        * API cleanup and improvements to VrmlSFColor, VrmlSFRotation,
          VrmlSFVec2f, VrmlSFVec3f.

2000-12-12  Braden McDaniel  <braden@endoframe.com>

        * API improvements (including const-correctness) to VrmlSFVec3f and
          VrmlSFRotation. Changed semantics for methods to match those of the
          ECMAScript binding.

        * Implemented VrmlSFRotation::slerp().

2000-12-10  Braden McDaniel  <braden@endoframe.com>

        * Const-correctness changes to VrmlSFImage. Broad ramifications.
          Importantly, we now must copy the image before rescaling it in
          the ViewerOpenGL. This is less efficient, but rescaling should
          only happen once, so I doubt the copy will be too big of a
          deal.

2000-12-09  Braden McDaniel  <braden@endoframe.com>

        * Changed type used to represent SFInt32 and MFInt32 from int to
          long.

        * Miscellaneous const- and signed-correctness changes.

2000-12-08  Braden McDaniel  <braden@endoframe.com>

        * Fixed viewpoint cockeyed-ness introduced by patch on 6 Dec.

        * Changed name of `libvrml97' to `libopenvrml'.

        * Changed installation location for libopenvrml headers to
          `$(includedir)/OpenVRML'.

        * Changed name of `libvrml97gl' to `libopenvrml-gl'.

        * Changed installation location for libopenvrml-gl headers to
          `$(includedir)/OpenVRML/GL'.

2000-12-06  Braden McDaniel  <braden@endoframe.com>

        * Applied patch to fix
          
          <http://sourceforge.net/bugs/?func=detailbug&bug_id=124439&group_id=7151>
          
          This adds identification of hexadecimal integers to the lexer,
          and removes use of istrstream from the parser.

        * Since Script nodes are nolonger detected in the scanner, removed
          NODE_SCRIPT identifier.

2000-12-05  Braden McDaniel  <braden@endoframe.com>
