@@ -41,9 +41,9 @@
 #include <string.h>
 
 // JavaScript
-//#if HAVE_JAVASCRIPT
-# include "ScriptJS.h"
-//#endif
+# ifndef OPENVRML_DISABLE_JAVASCRIPT
+#   include "ScriptJS.h"
+# endif
 
 // Java via Sun JDK
 #if HAVE_JDK
@@ -64,14 +64,14 @@ ScriptObject *ScriptObject::create( VrmlNodeScript *node,
         if (! url[i]) continue;
 
         // Get the protocol & mimetype...
-//#if HAVE_JAVASCRIPT
+# ifndef OPENVRML_DISABLE_JAVASCRIPT
         // Need to handle external .js files too...
         if (strncmp(url[i], "javascript:", 11) == 0 ||
 	    strncmp(url[i], "vrmlscript:", 11) == 0 )
 	{
 	    return new ScriptJS( node, url[i]+11 );
 	}
-//#endif // HAVE_JAVASCRIPT
+# endif
 
 #if HAVE_JDK
         int slen = strlen(url[i]);
